QA Simplify code